<resources>
    <string name="app_name">Pingwinek Cooks</string>
    <string name="pingwinekcooks">Pingwinek Cooks - easy to use recipe app</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="all">all</string>

    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="more">More options</string>
    <string name="checkNow">Check now</string>

    <string name="authenticationMessage">Authentication Message</string>
    <string name="errorMessage">Error Message</string>

    <string name="login">Login</string>
    <string name="loggedIn">You are now signed in.</string>
    <string name="is_logged_in">%1$s (logged in)</string>
    <string name="logged_in_as">Logged in as: %1$s</string>
    <string name="is_not_logged_in">%1$s (not logged in)</string>

    <string name="registerOrLoginNow">Register or sign in now</string>
    <string name="verifyEmailNow">Verify email now</string>

    <string name="logout">Logout</string>
    <string name="loggedOut">You are now signed out.</string>
    <string name="confirmLogout">Log out current user?</string>

    <string name="setPassword">Set password</string>
    <string name="password">password</string>
    <string name="sendPasswordRequest">Send request for password reset</string>
    <string name="lostPassword">Reset password</string>
    <string name="lostPasswordSent">Password reset email was sent.</string>
    <string name="lostPasswordSentLong">Password reset email was sent. If you have not received an email, make sure the email address correct. Maybe you do not have an account with this email address?</string>
    <string name="lostPasswordFailed">Resetting password failed</string>
    <string name="newPassword">New password</string>
    <string name="oldPassword">Old password</string>
    <string name="changePassword">Change password</string>
    <string name="PasswordChanged">Your password is reset. You can now sign in.</string>
    <string name="changePasswordFailed">Change password failed</string>

    <string name="profile">Profil</string>
    <string name="register">Register</string>
    <string name="registrationIncomplete">Registration Incomplete</string>
    <string name="unsubscribe">Delete profile</string>
    <string name="confirmUnsubscribe">Really delete profile?</string>
    <string name="no_account">No profile logged in</string>
    <string name="manage_account">Profile</string>
    <string name="verificationNeeded">Your email needs to be verified.</string>
    <string name="sendVerificationEmail">Send verification email</string>
    <string name="confirmationSucceeded">Your email is now confirmed.</string>
    <string name="confirmationFailed">Confirmation of profile failed.</string>
    <string name="declareAcceptanceOfDataprotection">Yes, I agree with storing my data and I accept the <annotation clickableArea="dataprotection">privacy statement</annotation>.</string>

    <string name="passwordPolicy">The password must contain at least %d characters, no whitespace, min. %d lower and %d upper letter, min. %d digit and %d special character.</string>

    <string name="delete_account">Delete account</string>
    <string name="accountCreated">Your account was created.</string>
    <string name="accountDeleted">Your account was deleted.</string>

    <string name="impressum">Impressum</string>
    <string name="dataprotection">Privacy statement</string>
    <string name="WantToCheckDataProtection">Do you want to check the data protection policy first?</string>

    <string name="acceptCrashlytics">Yes, I agree that the app can send crash reports</string>

    <string name="recipeLocal">Recipe</string>
    <string name="recipes">Recipes</string>
    <string name="recipe_title">Recipe name</string>
    <string name="recipe_description">Short description</string>
    <string name="recipe_delete_confirm">Really delete recipe?</string>
    <string name="add_recipe">Add recipe</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="delete_recipe">Delete recipe</string>

    <string name="attach_document">Attach document</string>
    <string name="update_attachment">Update document</string>
    <string name="delete_attachment">Delete document</string>
    <string name="show_attachment">Show document</string>

    <string name="ingredientRemote">Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredientName">Ingredient Name</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_number">Quantity (number)</string>
    <string name="quantity_verbal">Quantity (verbal, e.g. 1–2)</string>
    <string name="ingredient_quantity_unequal_verbal">If you define a verbal quantity, please also fill in the quantity as number.</string>
    <string name="unity">Unity</string>
    <string name="edit_ingredient">Edit ingredient</string>
    <string name="delete_ingredient">Delete ingredient</string>
    <string name="isGroupHeader">Group of Ingredients</string>

    <string name="instruction">Instruction</string>
    <string name="write_instruction">Add instruction</string>
    <string name="plus_new_ingredient">+ new ingredient</string>

    <string name="gallery">Gallery</string>
    <string name="edit_image_name">Edit image name</string>
    <string name="save_image_name">Save image name</string>
    <string name="delete_image">Delete image</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>

    <string name="pdf">pdf</string>
    <string name="add_pdf">add pdf</string>
    <string name="delete_pdf">Delete pdf</string>
    <string name="pdf_delete_confirm">Really delete pdf?</string>

    <string name="email">Email</string>
    <string name="confirmationSent">An email with a confirmation link was sent to the given address.</string>

    <string name="a2z">A-Z</string>
    <string name="by_category">By Category</string>

    <string name="labels">Labels</string>
    <string name="manage_labels">Manage Labels</string>
    <string name="edit_label">Edit Label</string>
    <string name="add_label">Add Label</string>
    <string name="delete_label">Delete Label</string>
    <string name="label_selected">Label Selected</string>
    <string name="label_delete_confirm">Really delete label?</string>
    <string name="no_labels_available">No labels available</string>

</resources>
