<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/siMessageView"
        style="@style/MessageBoxStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/siHeaderLeft"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/siHeaderRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siMessageView" />

    <TextView
        android:id="@+id/siHeaderRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorDisabled"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/siHeaderLeft"
        app:layout_constraintTop_toBottomOf="@+id/siMessageView" />

    <EditText
        android:id="@+id/siEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/siHeaderLeft" />

    <EditText
        android:id="@+id/siPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siEmail" />

    <TextView
        android:id="@+id/siLostPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/lostPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siPassword" />

    <CheckBox
        android:id="@+id/siCheckCrashlyticsBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siLostPassword" />

    <TextView
        android:id="@+id/siAcceptCrashlytics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:text="@string/acceptCrashlytics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/siCheckCrashlyticsBox"
        app:layout_constraintTop_toTopOf="@+id/siCheckCrashlyticsBox" />

    <CheckBox
        android:id="@+id/siCheckBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siAcceptCrashlytics" />

    <TextView
        android:id="@+id/siAcceptance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/text_margin"
        android:text="@string/declareAcceptanceOfDataprotection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/siCheckBox"
        app:layout_constraintTop_toTopOf="@+id/siCheckBox" />

    <Button
        android:id="@+id/siCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorDisabled"
        android:text="@string/close"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/siLoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siAcceptance" />

    <Button
        android:id="@+id/siLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/siCancelButton"
        app:layout_constraintTop_toBottomOf="@+id/siAcceptance" />

    <TextView
        android:id="@+id/siLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siLoginButton" />

    <TextView
        android:id="@+id/siDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/siLogout" />

</androidx.constraintlayout.widget.ConstraintLayout>