<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            style="@style/MessageBoxStyle"
            android:id="@+id/raMessageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/raEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/text_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@id/raMessageView"
            android:hint="@string/email"
            android:importantForAutofill="no"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/raPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/text_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/raEmail"
            android:hint="@string/password"
            android:importantForAutofill="no"/>
    <CheckBox
            android:id="@+id/raCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/raPassword" />
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/raCheckBox"
            android:layout_marginStart="@dimen/text_margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/raPassword"
            android:text="@string/declareAcceptanceOfDataprotection"
            android:id="@+id/raAcceptance"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="161dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/raAcceptance"
            android:onClick="registerButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>